--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="reset.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600|Work+Sans:300,500&display=swap&subset=latin-ext" rel="stylesheet" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jammming</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
